--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "liveServer.settings.port": 5501,
-  "prettier.proseWrap": "always",
-  "html.format.wrapLineLength": 90
+  "prettier.proseWrap": "preserve",
+  "html.format.wrapLineLength": 120
 }
